--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -150,5 +155,17 @@
         android:layout_below="@+id/clearButton"
         android:layout_centerHorizontal="true" />
 
+    <TextView android:id="@+id/invalid_noResults"
+        android:text="No Results Found"
+        android:layout_width="wrap_content"
+        android:textSize="23sp"
+        android:textColor="#050505"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/clearButton"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
+
+    </ScrollView>
