--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -6,7 +6,16 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.longpengjiao.ebaysearch.ResultActivity$ResultsFragment">
 
+    <TextView android:id="@+id/resultsTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:textColor="#7C8281"
+
+        />
     <ListView
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/resultsTitle"
         android:id="@+id/result_list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
